Opened 16 years ago

Closed 10 years ago

#3105 closed bug (fixed)

[Deskbar] empty menu in Deskbar

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Deskbar Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #8261, #9346, #9432, #11761
Platform: All

Description

To reproduce:
Click Leaf menu
Hold alt+w
Click Leaf menu twice

Change History (10)

comment:1 by anevilyak, 16 years ago

Component: Kits/Interface KitApplications/Deskbar
Summary: [Interface Kit] empty menu in Deskbar[Deskbar] empty menu in Deskbar

This one's an actual Deskbar bug I believe, I remember this from back in the R5 days too. The problem iirc is that Deskbar keeps pointers to all those menus and clear/repopulates them instead of regenerating them each time, and it's possible to trigger a race where it shows a menu that's still in the middle of clearing. Resetting component.

comment:2 by humdinger, 16 years ago

A bug that was closed some weeks ago also resulted in an "empty" menu: #1813. Maybe it's related.

comment:3 by diver, 15 years ago

Still here in hrev35455.

comment:4 by diver, 15 years ago

Version: R1/pre-alpha1R1/Development

comment:5 by diver, 15 years ago

Still here in hrev38300.

comment:6 by diver, 13 years ago

Blocking: 8261 added

comment:7 by diver, 12 years ago

Blocking: 9346 added

comment:8 by diver, 12 years ago

Blocking: 9432 added

comment:9 by anevilyak, 10 years ago

Blocking: 11761 added

comment:10 by jessicah, 10 years ago

Resolution: fixed
Status: newclosed

Resolved in hrev48776.

Note: See TracTickets for help on using tickets.