Deskbar: fix showing an empty leaf menu, #3105.

* NeedsToRebuild() didn't actually do anything, as this
  returns whether it needs to be rebuilt or not.
* Replaced RemoveItems() with ForceRebuild(), which should
  already delete the menu items, whilst additionally
  letting the leaf menu know that it needs to rebuild itself.

This bug was reproducible 100%; however, with this fix, there
is now a rare race condition where clicking between an app menu
and the leaf menu will result in both menus showing concurrently.